@@ -1,3 +1,8 @@
+2011-09-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
+
+	* reload.c (find_reloads): Set operand_mode to Pmode for address
+	operands consisting of just a CONST_INT.
+
 2011-09-22  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/50482
